# super-audio-manager

./: README.md
documents/diagrams/: diagrams.md  script_sync.txt
documents/requirements/: SRS.md
documents/tests/: TEST_PLAN-a.md  TEST_RESULTS-a.md
src/: CMakeLists.txt  main.cpp
src/core/: api.h  core.h
src/items/: modulemetainfo.h
src/mockup/: mockdataprovider.cpp  mockdataprovider.h
src/modules/: impl_modules.h
src/res/: res.qrc
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.xml
src/ui/modal_widgets/: appsettingsdialog.cpp  appsettingsdialog.h  filtereditcomplexmockup.cpp  filtereditcomplexmockup.h  filtereditdialog-simple.xml  filtereditdialog.cpp  filtereditdialog.h  filtereditmockup-complex.xml  modulemanagerwidget.cpp  modulemanagerwidget.h  modulemanagerwidget.ui  sourcesmanagerdialog.cpp  sourcesmanagerdialog.h  xml_appsettingsdialog.xml
src/ui/module_panels/: catalogpanelwidget.cpp  catalogpanelwidget.h  catalogpanelwidget.ui  catalogpanelwidget.xml  playerpanelwidget.cpp  playerpanelwidget.h  playerpanelwidget.ui  playerpanelwidget.xml
src/ui/qt_items/: modulecataloglistitem.cpp  modulecataloglistitem.h  modulecataloglistitem.ui  modulecataloglistitem.xml
